--- a/scss/index.scss
+++ b/scss/index.scss
@@ -136,8 +136,8 @@ html {
 }
 #cube {
   position:relative;
-  transform-style: preserve-3d;
-  transition: transform .5s;
+  @include transform-style(preserve-3d);
+  @include transition(transform .5s);
   width: 100%;
   height: 100%;
 }
