--- a/scss/index.scss
+++ b/scss/index.scss
@@ -59,11 +59,12 @@ html {
     }
     #dice {
       position: absolute;
-      right: 50px;
-      top: 50px;
+      right: calc(50% - 100px);
+      top: 30px;
       @include button('pink');
       font-size: 20px;
-      padding: 15px 50px;
+      width: 200px;
+
     }
     i {
       position: absolute;
