--- a/scss/index.scss
+++ b/scss/index.scss
@@ -96,7 +96,7 @@ html {
   }
 }
 
-.run {
+#run_dice {
   position: fixed;
   display: inline-block;
 
@@ -122,7 +122,7 @@ html {
     height: 200px;
     @include perspective(200px);
 
-    #cube {
+    #dice {
       position: relative;
       width: 100%;
       height: 100%;
