--- a/scss/index.scss
+++ b/scss/index.scss
@@ -61,6 +61,22 @@ html {
       font-size: 20px;
       width: 200px;
     }
+    #quota {
+      position: absolute;
+      right: 10px;
+      top: 30px;
+      padding: 10px;
+      border: 1px solid rgba(39, 40, 34, .4);
+      background-color: rgba(255, 255, 255, .8);
+
+      @include border-radius(2px);
+      @include transition(all .3s);
+      @include box-shadow(0 0 15px 1px rgba(0, 0, 0, 0.2));
+
+      > span {
+        margin: 0 5px;
+      }
+    }
     i {
       position: absolute;
       display: block;
@@ -106,6 +122,106 @@ html {
           }
         }
       }
+    }
+  }
+}
+
+.info_bubble {
+  position: relative;
+  width: 260px;
+  overflow: hidden;
+  text-align: left;
+  font-size: 16px;
+  color: rgba(50, 50, 50, 0.7);
+  min-height: 150px;
+
+  .img {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    @media screen and (min-width: 0px) and (max-width: #{$mediaMobileWidth - 1px}) {
+      max-height: 150px;
+    }
+    @media screen and (min-width: #{$mediaMobileWidth}) {
+      max-height: 300px;
+    }
+
+    overflow: hidden;
+
+    &:hover {
+      .title {
+        color: rgba(255, 255, 255, 1);
+      }
+    }
+    img {
+      width: 100%;
+    }
+    .title {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: inline-block;
+      width: 100%;
+
+      padding-left: 5px;
+      padding-bottom: 3px;
+      padding-top: 5px;
+      color: rgba(255, 255, 255, 0.8);
+      font-weight: bold;
+
+      background-color: rgba(0, 0, 0, 0);
+
+      @include overflow-docx3();
+      @include transition(all .3s);
+      @include text-shadow(1px 1px 1px rgba(53, 53, 53, 0.5));
+      @include background-image(
+                    linear-gradient(
+                        rgba(0, 0, 0, 0) 5%,
+                        rgba(0, 0, 0, .1) 15%,
+                        rgba(0, 0, 0, .9) 100%
+                    ));
+    }
+  }
+  .items {
+    font-size: 14px;
+    padding: 5px 10px;
+
+    .item {
+      padding: 0 5px;
+      @include overflow-docx3();
+
+      & ~ .item {
+        border-top: 1px solid rgba(39, 40, 34, .4);
+        margin-top: 2px;
+      }
+    }
+  }
+  .bottom {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    border: 1px solid rgba(255, 0, 0, .3);
+  }
+  .delete {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: inline-block;
+    height: 32px;
+    line-height: 32px;
+    width: 32px;
+    border-left: 1px solid rgba(39, 40, 34, .5);
+    border-bottom: 1px solid rgba(39, 40, 34, .5);
+    color: rgba(250, 250, 250, 0.7);
+    background-color: rgba(39, 40, 34, .2);
+    text-align: center;
+    cursor: pointer;
+    @include transition(all .3s);
+    @include border-radius(0 0 0 2px);
+
+    &:hover {
+      color: rgba(255, 255, 255, 1);
+      background-color: rgba(39, 40, 34, .3);
     }
   }
 }
