--- a/scss/index.scss
+++ b/scss/index.scss
@@ -55,28 +55,37 @@ html {
     }
     #throw_dice {
       position: absolute;
-      right: calc(50% - 100px);
       top: 30px;
+      left: 10px;
       @include button('pink');
       font-size: 20px;
-      width: 200px;
+      width: 100px;
+    }
+    #about {
+      position: absolute;
+      top: 30px;
+      right: 90px;
+      @include button();
+      font-size: 20px;
+    }
+    #more {
+      position: absolute;
+      top: 30px;
+      right: 10px;
+      @include button('green');
+      font-size: 20px;
     }
     #quota1, #quota2 {
       position: absolute;
       right: 10px;
 
-      // @media screen and (min-width: 0px) and (max-width: 649px) {
-        bottom: 140px;
-      // }
-      // @media screen and (min-width: 650px) {
-      //   top: 30px;
-      // }
+      bottom: 140px;
 
       padding: 10px;
       font-weight: bold;
       color: rgba(39, 40, 34, 1);
       border: 1px solid rgba(39, 40, 34, .4);
-      background-color: rgba(0, 0, 255, 0.2);
+      background-color: rgba(0, 0, 255, 0.3);
 
       @include border-radius(2px);
       @include transition(all .3s);
@@ -89,12 +98,7 @@ html {
     #quota2 {
       right: auto;
       left: 10px;
-      // @media screen and (min-width: 0px) and (max-width: 649px) {
-      // }
-      // @media screen and (min-width: 650px) {
-      //   top: 90px;
-      // }
-      background-color: rgba(0, 128, 0, 0.3);
+      background-color: rgba(0, 128, 0, 0.4);
     }
     i {
       position: absolute;
@@ -116,13 +120,13 @@ html {
       width: 100%;
       height: 130px;
       padding: 15px;
-      border: 1px solid rgba(39, 40, 34, .4);
-      background-color: rgba(255, 255, 255, .8);
+      border-top: 1px solid rgba(39, 40, 34, .5);
+      background-color: rgba(255, 255, 255, .95);
       overflow-y: auto;
 
       @include border-radius(2px);
       @include transition(all .3s);
-      @include box-shadow(0 0 15px 1px rgba(0, 0, 0, 0.2));
+      @include box-shadow(inset 0 1px 5px rgba(0, 0, 0, 0.2));
 
       text-align: center;
 
@@ -131,13 +135,6 @@ html {
         text-align: left;
         @include overflow-docx3();
 
-        // &:first-child {
-        //   font-size: 16px;
-        //   font-weight: bold;
-        //   border-bottom: 1px solid rgba(39, 40, 34, .1);
-        //   margin-bottom: 5px;
-        //   padding-bottom: 5px;
-        // }
         &.title {
           font-size: 16px;
           font-weight: bold;
@@ -148,8 +145,10 @@ html {
         }
         &.log {
           padding: 0 20px;
-          @include split-right(150px);
+          @include split-right(65px);
+
           .l, .r {
+            @include overflow-docx3();
           }
           .r {
             text-align: right;
